[fix] working in docs
